# pre-commit-hooks

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
pre_commit_hooks/: check_branch_name.py
