[metadata]
name = pre_commit_hooks
version = 0.0.1
description = A range of pre-commit hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/windpioneers/pre-commit-hooks
author = Tom Clark (thclark)
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    check-branch-name = pre_commit_hooks.check_branch_name:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
